[project]
name = "dicomtrolley"
version = "3.3.0"
description = "Retrieve medical images via WADO-URI, WADO-RS, QIDO-RS, MINT, RAD69 and DICOM-QR"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/sjoerdk/dicomtrolley"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pydicom>=3.0.1",
    "requests-futures>=1.0.0",
    "pynetdicom",
    "Jinja2",
    "requests-toolbelt>=1.0.0",
    "pydantic>=2"
]

[tool.black]
line-length = 79
target-version = ['py310']

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-randomly>=3.5.0",
    "pytest-cov>=2.11.1",
    "tox>=3.23.0",
    "requests-mock>=1.11.0",
    "factory-boy>=3.2.1",
    "sybil>=5.0.3",
    "mkdocs>=1.5.2",
    "mkdocstrings>=0.22.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-section-index>=0.3.5",
    "mkdocs-literate-nav>=0.6.0",
    "markdown-mdantic>=1.3.5",
    "mkdocs-material>=9.2.8",
    "mkdocs-autorefs>=0.5.0",
    "pip-tools>=7.3.0",
    "pre-commit"
]
