[project]
name = "dicomtrolley"
version = "3.3.0"
description = "Retrieve medical images via WADO-URI, WADO-RS, QIDO-RS, MINT, RAD69 and DICOM-QR"
authors = [{name="Sjoerd Kerkstra", email ="sjoerd.kerkstra@radboudumc.nl"}]
readme = "README.md"
license = "Apache-2.0"
keywords = ["DICOM","DICOM-web","QIDO", "WADO", "MINT", "RAD69", "Download"]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pydicom>=3.0.1",
    "requests-futures>=1.0.0",
    "pynetdicom",
    "Jinja2",
    "requests-toolbelt>=1.0.0",
    "pydantic>=2"
]
[project.urls]
Repository = "https://github.com/sjoerdk/dicomtrolley"
Changelog = "https://github.com/sjoerdk/dicomtrolley/blob/main/HISTORY.md"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.uv.sources]
dicomtrolley = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-randomly>=3.5.0",
    "pytest-cov>=2.11.1",
    "tox>=3.23.0",
    "factory-boy>=3.2.1",
    "sybil>=5.0.3",
    "pre-commit",
    "requests-mock>=1.12.1",
]
docs = [
    "dicomtrolley",
    "markdown-mdantic>=2.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.20",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.18.2",
    "pydantic>=2.11.9",
    "pydicom>=3.0.1",
]
